--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -171,6 +171,10 @@
   margin-right: 0.5rem;
 }
 
+.dashboard-row .card{
+  min-height: 101px;
+}
+
 /* Custom tooltip styles */
 .tooltip {
   font-size: 0.875rem;
